--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </section>
     <section class="sessão">
         <div class="bloco-container">
-            <div class="apres3" style="background-image: url("Ouvindo3.jpg")">Bem-Estar</div>
+            <div class="apres3">Bem-Estar</div>
         </div>
     </section>
 
@@ -131,3 +131,4 @@
 
 
 </html>
+
