--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </section>
         </div>
         <div>
-            <hummor class="center">Onde seu Humor Vira melodia</hummor>
+            <hummor class="center" style="color:black;">Onde seu Humor Vira melodia</hummor>
         </div>
     </section>
 
@@ -131,4 +131,5 @@
 
 
 </html>
+
 
